US1165 fix width size for Windows browswer overwrap issue

--- a/sli/dashboard/src/main/webapp/static/css/common.css
+++ b/sli/dashboard/src/main/webapp/static/css/common.css
@@ -163,7 +163,7 @@ th.ui-th-column div {
 
 /** Custom */
 .contactInfoItem {
-	width:300px;
+	width:310px;
 }
 .singleOfSixColumns {
 	width:200px;
